@@ -1,5 +1,8 @@
 Release Notes
 
+* 11/13/2017
+  * using 60d of lifetime for merged parent datasets
+
 * 11/10/2017
   * Changed call to getHS06sec to new mode
 
